<resources>
    <string name="app_name">My Application</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_register">Dont have an account?  Register</string>
    <string name="todo">Todo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">CHECKOUT</string>
    <string name="purchase">PURCHASE</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="id_number">Id Number</string>
    <string name="email">Email</string>
    <string name="second_name">Second name</string>
    <string name="first_name">First name</string>
    <string name="address">Address</string>
    <string name="signin">SignIn</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="total_ksh_0">Total: Ksh. 0</string>
    <string name="location">location</string>
</resources>