<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <ImageView
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_baseline_layers"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/todo" />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:background="@drawable/round_edittext"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/round_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/login"
        android:background="@drawable/round_edittext"
        android:layout_margin="10dp"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/register_textview"
        android:text="@string/dont_have_an_account_register"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>
</LinearLayout>